--- a/vignettes/salmon-data-references.Rmd
+++ b/vignettes/salmon-data-references.Rmd
@@ -2,7 +2,7 @@
 title: "Salmon Data References"
 author: "[Jim Tyhurst](https://www.jimtyhurst.com/)"
 date: "`r Sys.Date()`"
-output: rmarkdown::html_vignette
+output: pdf_document
 vignette: >
   %\VignetteIndexEntry{Vignette Title}
   %\VignetteEngine{knitr::rmarkdown}
