--- a/vignettes/columbia-river-adult-salmon-returns.Rmd
+++ b/vignettes/columbia-river-adult-salmon-returns.Rmd
@@ -2,7 +2,9 @@
 title: "Data Exploration: Columbia River Adult Salmon Returns"
 author: "[Jim Tyhurst](https://www.jimtyhurst.com/)"
 date: "`r Sys.Date()`"
-output: rmarkdown::html_vignette
+output:
+  rmarkdown::html_vignette:
+    toc: true
 numbersections: true
 vignette: >
   %\VignetteIndexEntry{Vignette Title}
@@ -24,6 +26,7 @@ knitr::opts_chunk$set(
 library(salmonstats)
 library(glue)
 library(tidyverse)
+library(lubridate)
 ```
 
 ## Data preparation
@@ -39,14 +42,14 @@ After downloading each file of data, the final two lines of each file needed to 
 
 > fpc-salmon-{passage_reporting_site_abbreviation}-{year}0101-{year}1231.csv
 
-For example, the following files are for data from Bonneville Dam (BON) from years 2000 and 2015, respectively:
+For example, the following files are for data from Bonneville Dam (BON) from years 2005 and 2015, respectively:
 
-> fpc_salmon-BON-20000101-20001231.csv  
-> fpc_salmon-BON-20150101-20001231.csv
+> fpc_salmon-BON-20050101-20051231.csv  
+> fpc_salmon-BON-20150101-20151231.csv
 
 Metadata is available from the [Fish Passage Center Adult Metadata](http://www.fpc.org/documents/metadata/FPC_Adult_Metadata.html) web page. In particular, Bonneville Dam data only has observations from March 15 to November 15 for years up to 2001. Starting in 2002, observations were made every day during the year.
 
-<span style="color:red">_To Do_: There are quite a few daily count values that are negative. What does that mean?</span>
+<span style="color:red">_Open Issue_: There are quite a few daily count values that are negative. What does that mean? More fish went downstream through the passage reporting site than upstream? I looked through the [metadata](http://www.fpc.org/documents/metadata/FPC_Adult_Metadata.html), but I did not see an explanation for these negative field values.</span>
 
 ```{r message=FALSE}
 # Replace the path components with the location of your data.
@@ -84,7 +87,7 @@ passage_reporting_site_code <- "BON"
 steelhead <- first_year:last_year %>% 
   purrr::map(function(year) {get_fpc_data(year, passage_reporting_site_code, data_directory)}) %>% 
   purrr::reduce(function(x, y) {dplyr::bind_rows(x, y)}) %>% 
-  dplyr::select(Dam, Year, DayOfYear, Steelhead)
+  dplyr::select(Dam, Year, DayOfYear, Steelhead, Date)
 dim(steelhead)
 ```
 
@@ -105,10 +108,16 @@ steelhead %>%
 
 I am surprised that 2010 and 2015 have higher peaks than 2000 and 2005, because I thought that salmon numbers were descreasing. Let's look more closely at the yearly trend. In the next plot, we sum the daily observations, in order to compare total quantity for the whole year.
 
-<span style="color:red">_To Do_: Revise the plots to only include data from March 15 to November 15 when comparing years before 2002 with years from 2002 and later, because years before 2002 only have data for those 8 months of the year.</span>
+Since years before 2002 only collected data from March 15 to November 15, we exclude observations from outside those days from 2002 and later, in order to be comparing similar sets of data.
+
+<span style="color:red">_To Do_: Fix the following calculation to work for leap years.</span>
 
 ```{r fig.height = 6, fig.width = 8, fig.align = "center"}
-steelhead %>% 
+first_observation_day <- 74  # March 15, except for leap year
+last_observation_day <- 319  # Nov 15, except for leap year
+steelhead  %>% 
+  dplyr::filter(lubridate::yday(Date) >= first_observation_day,
+                lubridate::yday(Date) <= last_observation_day) %>% 
   dplyr::group_by(Year) %>% 
   dplyr::mutate(Quantity = sum(Steelhead)) %>%
   ggplot(aes(Year, Quantity)) +
