--- a/vignettes/columbia-river-adult-salmon-returns.Rmd
+++ b/vignettes/columbia-river-adult-salmon-returns.Rmd
@@ -3,7 +3,7 @@ title: "Data Exploration: Columbia River Adult Salmon Returns"
 author: "[Jim Tyhurst](https://www.jimtyhurst.com/#home)"
 date: "`r Sys.Date()`"
 output:
-  rmarkdown::html_vignette:
+  github_document:
     toc: true
 numbersections: true
 vignette: >
