--- a/vignettes/nuseds-adult-salmon-escapement-data.Rmd
+++ b/vignettes/nuseds-adult-salmon-escapement-data.Rmd
@@ -2,7 +2,7 @@
 title: "NuSEDS Adult Salmon Escapement Data"
 author: "[Jim Tyhurst](https://www.jimtyhurst.com/)"
 date: "`r Sys.Date()`"
-output: rmarkdown::html_vignette
+output: github_document
 vignette: >
   %\VignetteIndexEntry{Vignette Title}
   %\VignetteEngine{knitr::rmarkdown}
