Uses relative references to source.

--- a/vignettes/columbia-river-adult-salmon-returns.Rmd
+++ b/vignettes/columbia-river-adult-salmon-returns.Rmd
@@ -21,7 +21,7 @@ knitr::opts_chunk$set(
 
 <span style="color:red">_Work in Process_ ...</span>
 
-Source code at: https://github.com/jimtyhurst/salmonstats/blob/master/vignettes/columbia-river-adult-salmon-returns.Rmd
+Source code at: ../vignettes/columbia-river-adult-salmon-returns.Rmd
 
 ## Configuration
 ```{r}
@@ -136,7 +136,7 @@ steelhead  %>%
 
 ## References
 
-Source code: https://github.com/jimtyhurst/salmonstats
+Source code: ../
 
 Data source: http://www.fpc.org/web/apps/adultsalmon/Q_adultcounts_dataquery.php
 
