Marks relative path explicitly as URL.

--- a/vignettes/columbia-river-adult-salmon-returns.Rmd
+++ b/vignettes/columbia-river-adult-salmon-returns.Rmd
@@ -136,7 +136,7 @@ steelhead  %>%
 
 ## References
 
-Source code: ../
+Source code: [vignettes](../vignettes/)
 
 Data source: http://www.fpc.org/web/apps/adultsalmon/Q_adultcounts_dataquery.php
 
