--- a/vignettes/nuseds-adult-salmon-escapement-data.Rmd
+++ b/vignettes/nuseds-adult-salmon-escapement-data.Rmd
@@ -19,9 +19,9 @@ knitr::opts_chunk$set(
 )
 ```
 
-<span style="color:red">_Work in Process_ ...</span>
+&#x1F53B;&nbsp;_Work in Process_ ...&nbsp;&#x1F53A;
 
-Source code at: ../vignettes/nuseds-adult-salmon-escapement-data.Rmd
+Source code at: [nuseds-adult-salmon-escapement-data.Rmd](../vignettes/nuseds-adult-salmon-escapement-data.Rmd)
 
 ## Configuration
 
